*ftl-1.02.6 (24 Nov 2012)

  24 Nov 2012; Hendrik v. Raven <hendrik@consetetur.de> +ftl-1.02.6.ebuild,
  +metadata.xml:
  [games-roguelike/ftl] added