@@ -1,21 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ftl-linux-1.02.6-1350405106.tar.gz 155864467 SHA256 f7f9187f6625ae8317674d825ce8a112f04bf85b02006fe29b1b886dabee0c60 SHA512 6141e559245055bebef4fca27ee0c777ef61b65cdad2145d5c74365e7f5e0b3ce81f3de3348438571088623faee184e0fd1c690196b938b647cc0a72259da90d WHIRLPOOL 8fd87a1f2f3a646cedd616b6db2190456a3a20736f7ec6fbb8e1f4d0098d2552747cc278a3873e81b186f2b8450f4d20b7c00ba2d2d7133d1bee470f8b22e7f4
+DIST ftl_faster_than_light-linux-1.03.1.tar.gz 157094737 SHA256 d5e5da80e6865b0614087e09ca5eca9aee3c01906a9485ccde21267d01640264 SHA512 866e910692742e5952c78a425494dab705651d830ccee38347bf6341b60c2f0ce0f4c509dc802b89471f58a9f0235ae09c063da5eaa281c6b8fa57e4ae2986e9 WHIRLPOOL 3604967f7e7536a40f6028e721b9085c896cca0179c76eaab9a4329a09a1b9892f157aa956c5d9a92e71e329f90af2eb9e79f8db17f4a7d678ba3d2cde6eac3f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQsUSGAAoJEHdhPr9WUBFmt8wP/ioJP/Mar8sg5CMFFEVq/SKs
-lbLmyD1JEsbk9uetNkYc717eK4LRIXZRaUKMAy6+iXzLZFbSu9Y2onXIiD0rDFVd
-bXHXGLDiTFiSfdrQXqU7Gtg1PbuL8ryKbikFRn58qi28Smn71lUE0NppC0mavELi
-8PAmf6XPnBEMBWqoMyj0PO9+j7hCuVQDZUnvKNLYf5dP5NuutC4DKm3Fi+BM8i3m
-dJNCiZWAdpE4OngVvbxTVn4EDffp8b4rWTm/ZDJcpoyNQVamtfJiozhMAE4M6OEl
-q0PZwC08IDRaD7d5qNSFithk5jCeTXRPLfVh5B501wsp16UAEl9zl29oCTC/wyOZ
-2TU7mq6t4UHvXJpnIBIEdSCu8PH9U2e4tDjAEdNcdC+QZzlAtXNNFXCg71EKxFWD
-tXIwnlnZRmzeU3GmVAS6QPc7OSJT6PCKciomRCsLjvU4WEtliSx8Y5IITnNoABah
-o8AgRIynDPfZVtXQSPotRGB/mAMKpGhPtwovo0WwYBkmGtue9APB5Jn07kcLZ4FY
-SUIQRdtA7kZDNP7pU3CJ8L8K+tkqkG82+84uTuMSWYLfDv1gja11h9D6zTjDTPCN
-xtgo12LTMBcUz9WNkbvmabCaZt2BjJnnhuVK0tBnCOfSuqXMMF7jKC0j1MKqPsp9
-JQx1oAIQfuZyh/6ikDjL
-=e9Ki
+iQIcBAEBCAAGBQJQ5B8SAAoJEHdhPr9WUBFm5mMQAMS8K7RJu3aGKLvvIjQ/pw8L
+6VrtNNhFYQw7VeyXIC71x4k63fajKYMaSKny9JILR9qElWxUjwI7QuWTahnNh6hl
+UV7zFosGGFKRwMhoFYDWsa4Il5+xc/PuMfamGfaNCoizMTnhxZk5rXGDoDquUB4H
+XrY89o7qSe8yyu+1vBA8MHw8aXHNwvk2zlcXDnlrTEd0osn05Gx5qgrtXMQ9VneU
+JdlfET1zpZPYQGvSRVXfEAMJbvHrxPyRODcP87Gj9wLtcDwl1u5TcVtOIY2v9ceK
+2u0Lhsxi87I7x+CPjbiz0loFzx0Y3rquEXrK2UVj7PW/01PixIFcdKmbOlLzM+PM
+seennpyzcKmAQmvd5JkFow3b1kIHcYrvWS4ZTrIOZauWDo4yZ8T75D09SEO0uTv3
+01UQ028RieMTrS5QuRCmd4GwfG9xuLU7lCP6wKT7gKrrhtMmCXN2JizQB/rchyqs
+nX6Tgy423LN+t4EVKCeTkgLbP7Lkfb1oDV+kUDzp8h1Lg82oLxt3arfoDAyR5BlS
+8Z8C/aWw21ZYTImphcpMM/jLf0HvTpMdoC7r6KWPoNyf+Pts2xzdj8M9US6pV+1d
+vrVh95nmLwXHw2qSDBXBJ/wxLJ/eUSOT5x/1cG3mDMjQoFeeRVUu7zR5L1SGgzFb
+QuVdouoy2DXBkgxuwbdq
+=ctzF
 -----END PGP SIGNATURE-----
