@@ -1,3 +1,9 @@
+*ftl-1.03.1 (02 Jan 2013)
+
+  02 Jan 2013; Hendrik v. Raven <hendrik@consetetur.de> +ftl-1.03.1.ebuild,
+  -ftl-1.02.6.ebuild:
+  [games-roguelike/ftl] version bump
+
 *ftl-1.02.6 (24 Nov 2012)
 
   24 Nov 2012; Hendrik v. Raven <hendrik@consetetur.de> +ftl-1.02.6.ebuild,
